--- a/appsscript.json
+++ b/appsscript.json
@@ -1,5 +1,13 @@
 {
   "timeZone": "America/New_York",
+  "executionApi": {
+    "access": "DOMAIN"
+  },
+  "oauthScopes": [
+    "https://www.googleapis.com/auth/spreadsheets",
+    "https://www.googleapis.com/auth/apps.groups.settings",
+    "https://www.googleapis.com/auth/admin.directory.group.readonly"
+  ],
   "dependencies": {
     "enabledAdvancedServices": [
       {
@@ -11,14 +19,6 @@
         "userSymbol": "AdminGroupsSettings",
         "serviceId": "groupssettings",
         "version": "v1"
-      }
-    ],
-    "libraries": [
-      {
-        "userSymbol": "AppsScriptCLASP",
-        "version": "0",
-        "libraryId": "1VS_1VSXWstuXD2KUhWX3nGuPWHzEczCsytK4dnmIh8LUr3_HhUvnqbP8",
-        "developmentMode": true
       }
     ]
   },
